--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .container {
-  max-width: 1140px;
+  max-width: 1230px;
   margin: 0 auto; }
 
 * {
@@ -9,124 +9,307 @@
   list-style: none;
   text-decoration: none; }
 
-@media (max-width: 1160px) {
-  .container {
-    padding: 0 20px; } }
-
 body {
-  color: #555555;
-  font-family: "Roboto Slab", serif;
-  font-weight: 400;
-  padding-bottom: 285px;
+  max-width: 1920px;
+  font-weight: 300;
   scroll-behavior: smooth; }
 
-.sctitle {
+.btn {
+  font-size: 14px;
+  font-weight: 800;
   text-transform: uppercase;
-  font-family: "Montserrat", sans-serif;
-  font-size: 20px;
-  text-align: center;
-  position: relative;
-  padding-bottom: 60px; }
-  .sctitle:before {
-    position: absolute;
-    content: " ";
-    top: 50px;
-    left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
-    width: 50px;
-    height: 2px;
-    background-color: #555555; }
+  border-radius: 3px;
+  color: white;
+  box-shadow: inset 0px -3px 0 0 #736357;
+  background-color: #998675;
+  width: 170px;
+  height: 50px;
+  margin: 50px auto;
+  border: none;
+  outline: none;
+  transition: all .3s;
+  cursor: pointer; }
+  .btn:hover {
+    background-color: #c7b299;
+    color: #362f2d; }
+  .btn:active {
+    box-shadow: inset 0px 3px 0 0 #736357; }
 
-.undertitle {
-  font-size: 16px;
-  text-align: center;
-  margin-bottom: 70px; }
-
-.preloader {
-  position: fixed;
+.header {
+  position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: 3;
-  background-color: rgba(192, 48, 28, 0.7);
-  text-align: center;
-  color: #fff;
-  font-size: 30px;
-  padding: 20%;
-  transition: 1s all;
-  opacity: 1;
-  visibility: visible; }
+  width: 100%;
+  z-index: 1;
+  overflow: hidden; }
 
-.loader {
-  width: 90px;
-  height: 90px;
-  border: 10px solid white;
-  border-radius: 50%;
-  border-top-color: #c0301c;
-  line-height: 60px;
+.burger-open {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-self: stretch;
+  background: none;
+  border: none;
+  outline-color: white;
+  position: fixed;
+  height: 55px;
+  left: 10%;
+  padding: 10px;
+  border-radius: 2px;
+  z-index: 2;
+  transition: .3s;
+  display: none; }
+  .burger-open span {
+    width: 35px;
+    height: 5px;
+    background-color: white;
+    display: block;
+    border-radius: 5px; }
+  .burger-open:hover span {
+    background-color: #c7b299; }
+
+.burger-close {
   color: white;
-  padding: 5px;
+  transition: all .3s;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 4em;
+  background: none;
+  border: none;
+  outline-style: none;
+  display: block;
+  width: 100%; }
+  .burger-close:hover {
+    transform: rotate(90deg); }
+
+.nav {
+  display: flex;
+  justify-content: space-between; }
+  .nav__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px 1rem; }
+  .nav__list {
+    padding-left: 40px;
+    font-weight: normal; }
+    .nav__list a {
+      color: white;
+      transition: all .3s; }
+      .nav__list a:hover {
+        color: #c7b299; }
+
+.logo {
+  display: flex;
+  align-items: center;
+  color: white;
+  font-size: 34px;
+  padding-left: 14px;
+  font-family: "Raleway", sans-serif; }
+
+.mob-menu {
+  flex-direction: column;
+  padding: 10px;
+  transition: .5s;
+  transform: translate(-500%);
+  position: fixed;
+  top: 0;
+  z-index: 2;
+  background-color: #362f2d;
+  opacity: .9; }
+  .mob-menu .nav__list {
+    padding: 10px; }
+
+.slider {
+  position: relative;
+  height: 100vh;
+  font-family: "Montserrat", sans-serif; }
+
+.slides {
+  display: none;
+  animation-name: fade;
+  animation-duration: 1s;
+  background-size: cover;
+  text-align: center;
+  color: white; }
+  .slides__content {
+    position: absolute;
+    top: 30%;
+    width: 100%; }
+  .slides__title {
+    font: "Raleway", sans-serif;
+    font-size: 52px;
+    font-weight: 800;
+    padding: 15px; }
+  .slides__subtitle {
+    font: "Raleway", sans-serif;
+    font-size: 36px;
+    font-weight: 500; }
+  .slides__text {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.5;
+    max-width: 562px;
+    margin: 0 auto; }
+
+.slides img {
+  vertical-align: middle;
+  width: 100vw;
+  min-height: 300px;
+  object-fit: cover;
+  height: 100vh; }
+
+.slideshow-container {
+  top: 0;
+  left: 0;
+  position: relative;
+  text-align: center; }
+
+.prev,
+.next {
+  cursor: pointer;
   position: absolute;
-  left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
-  animation: spin 1s infinite; }
+  width: auto;
+  padding: 1em;
+  margin-top: -1.5em;
+  color: #fff;
+  font-weight: bold;
+  font-size: 2em;
+  transition: 0.6s ease; }
 
-.done {
-  opacity: 0;
-  visibility: hidden; }
+.next {
+  right: 8%; }
 
-#left,
-#right {
-  display: inline-block; }
+.prev {
+  left: 8%; }
 
-@keyframes spin {
+.prev:hover {
+  transform: translateX(-20px);
+  opacity: .5; }
+
+.next:hover {
+  transform: translateX(20px);
+  opacity: .5;
+  color: white;
+  fill: white; }
+
+.dots {
+  text-align: center;
+  position: absolute;
+  bottom: 20px;
+  left: 45%; }
+
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: white;
+  border-radius: 50%;
+  display: inline-block;
+  transition: all 0.6s ease;
+  border: 2px solid transparent; }
+
+.active,
+.dot:hover {
+  border: 2px solid #c7b299;
+  background-color: transparent; }
+
+@-webkit-keyframes fade {
   from {
-    transform: translate(-50%, -50%) rotate(0deg); }
+    opacity: .4; }
   to {
-    transform: translate(-50%, -50%) rotate(360deg); } }
+    opacity: 1; } }
+
+@keyframes fade {
+  from {
+    opacity: .4; }
+  to {
+    opacity: 1; } }
+
+@media only screen and (max-width: 992px) {
+  .logo {
+    font-size: 26px; }
+  .nav__list {
+    padding-left: 20px; }
+  .next,
+  .prev {
+    transform: scale(0.5); }
+  .next {
+    right: 5%; }
+  .prev {
+    left: 5%; }
+  .next:hover {
+    transform: scale(0.5) translateX(20px); }
+  .prev:hover {
+    transform: scale(0.5) translateX(-20px); }
+  .slides__title {
+    font-size: 36px; }
+  .slides__subtitle {
+    font-size: 24px; } }
 
 @media only screen and (max-width: 768px) {
-  body {
-    padding-bottom: 195px; } }
+  .menu {
+    display: none; }
+  .burger--visibility {
+    display: flex; }
+  .logo {
+    margin: 0 auto; }
+    .logo h1 {
+      display: none; }
+  .prev,
+  .next {
+    display: none; } }
 
 @media only screen and (max-width: 576px) {
-  .undertitle {
-    margin-bottom: 20px; } }
+  .slides__title {
+    font-size: 26px; }
+  .slides__subtitle {
+    font-size: 20px; }
+  .dots {
+    left: 35%; } }
 
-@media only screen and (max-width: 470px) and (min-width: 320px) {
-  body {
-    padding-bottom: 135px; }
-  .sctitle {
+.services {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap; }
+
+.service {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 266px;
+  margin: 80px 10px;
+  position: relative; }
+  .service__img {
+    margin: 0 auto; }
+  .service__img path {
+    transition: all .3s; }
+  .service:hover path {
+    fill: #c7b299; }
+  .service__title {
+    font-family: "Raleway", sans-serif;
+    font-size: 22px;
+    font-weight: 600;
+    color: #555555;
+    padding: 29px 0 19px 0; }
+  .service__text {
+    color: #8c8c8c;
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.71;
     padding-bottom: 30px; }
-    .sctitle:before {
-      top: 30px; } }
-
-@keyframes rubberBand {
-  from {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1); }
-  30% {
-    -webkit-transform: scale3d(1.25, 0.75, 1);
-    transform: scale3d(1.25, 0.75, 1); }
-  40% {
-    -webkit-transform: scale3d(0.75, 1.25, 1);
-    transform: scale3d(0.75, 1.25, 1); }
-  50% {
-    -webkit-transform: scale3d(1.15, 0.85, 1);
-    transform: scale3d(1.15, 0.85, 1); }
-  65% {
-    -webkit-transform: scale3d(0.95, 1.05, 1);
-    transform: scale3d(0.95, 1.05, 1); }
-  75% {
-    -webkit-transform: scale3d(1.05, 0.95, 1);
-    transform: scale3d(1.05, 0.95, 1); }
-  to {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1); } }
-
-.rubberBand {
-  -webkit-animation-name: rubberBand;
-  animation-name: rubberBand; }
+  .service::after {
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    width: 70px;
+    height: 3px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #f1eee9;
+    transition: all .3s; }
+  .service:hover::after {
+    background-color: #c7b299; }
