--- a/css/style.css
+++ b/css/style.css
@@ -362,7 +362,8 @@ body {
   .realizations__img {
     position: absolute;
     bottom: 0;
-    max-width: 100%; }
+    max-width: 100%;
+    transition: all .3s; }
     .realizations__img--left {
       left: 0; }
     .realizations__img--center {
@@ -398,3 +399,92 @@ body {
       padding: 20px; }
     .realizations__img {
       width: 90%; } }
+
+.text-box {
+  background-image: linear-gradient(to right, #211b19, #4e3427); }
+  .text-box__inner {
+    padding: 50px 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .text-box__title {
+    font-family: "Raleway", sans-serif;
+    font-size: 28px;
+    color: white;
+    text-align: left;
+    font-weight: normal; }
+  .text-box__content {
+    font-size: 18px;
+    font-weight: 300;
+    color: #615855; }
+  .text-box .btn {
+    margin: 0; }
+
+.colored {
+  font-weight: normal;
+  color: #c7b299; }
+
+.counters {
+  background-image: linear-gradient(to right, #211b19, #4e3427); }
+  .counters__inner {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    padding: 70px;
+    flex-wrap: wrap; }
+
+.counter {
+  text-align: center;
+  position: relative;
+  padding: 0 5px; }
+  .counter__count {
+    font-size: 48px;
+    font-weight: 200;
+    line-height: 0.75;
+    color: white;
+    padding-top: 30px; }
+  .counter__name {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.43;
+    color: #c7b299;
+    text-transform: uppercase;
+    padding-top: 20px;
+    padding-bottom: 30px; }
+    .counter__name::after {
+      content: "";
+      position: absolute;
+      bottom: 0px;
+      width: 30px;
+      height: 2px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: #f1eee9; }
+
+@media only screen and (max-width: 992px) {
+  .counters__inner {
+    padding: 40px;
+    justify-content: space-evenly; } }
+
+@media only screen and (max-width: 768px) {
+  .counter__count {
+    font-size: 36px; } }
+
+@media only screen and (max-width: 700px) {
+  .counter {
+    padding: 40px 40px 0 40px; } }
+
+@media only screen and (max-width: 576px) {
+  .counters__inner {
+    padding: 0px;
+    justify-content: space-around; }
+  .counter {
+    padding: 20px 40px; }
+    .counter__img {
+      height: 30px; }
+    .counter__name {
+      padding-bottom: 0px; } }
+
+@media only screen and (max-width: 440px) {
+  .counters__inner {
+    display: block; } }
