--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,17 +1,34 @@
-$main-color: #c0301c;
-$text-color: #555555;
-$bg-color:#f8f8f8;
-$img-color: rgba(192, 48, 28, 0.7);
-$main-font:'Montserrat',
+// @import 'hero';
+// @import 'variables';
+// @import 'services';
+// @import 'realizations';
+// @import 'counter';
+
+
+$mainColor:linear-gradient(to right, #211b19, #4e3427);
+$textColor: #555555;
+$liteGrey:#8c8c8c;
+$hoverColor:#c7b299;
+$btnColor:#998675;
+$darkColor:#362f2d;
+$bgLigth:#fbfaf8;
+$white:white;
+$bgDark:rgba(17, 17, 17, 0.7);
+$mainFont:'Montserrat',
 sans-serif;
-$text-font: 'Roboto Slab',
-serif;
-%sec-padding {
-    padding: 100px 0;
+$titleFont: 'Raleway',
+sans-serif;
+
+%text {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.75;
+    color: $liteGrey;
+    padding: 24px 40px;
 }
 
 .container {
-    max-width: 1140px;
+    max-width: 1230px;
     margin: 0 auto;
 }
 
@@ -23,160 +40,687 @@ serif;
     text-decoration: none;
 }
 
-@media (max-width:1160px) {
-    .container {
-        padding: 0 20px;
-    }
-}
-
 body {
-    color: $text-color;
-    font-family: $text-font;
-    font-weight: 400;
-    padding-bottom: 285px;
+    max-width: 1920px;
+    font-weight: 300;
     scroll-behavior: smooth;
+    font-family: $mainFont;
 }
 
-.sctitle {
+.btn {
+    font-size: 14px;
+    font-weight: 800;
     text-transform: uppercase;
-    font-family: $main-font;
-    font-size: 20px;
-    text-align: center;
-    position: relative;
-    padding-bottom: 60px;
-    &:before {
-        position: absolute;
-        content: " ";
-        top: 50px;
-        left: 50%;
-        transform: translateX(-50%);
-        text-align: center;
-        width: 50px;
-        height: 2px;
-        background-color: $text-color;
+    border-radius: 3px;
+    color: $white;
+    box-shadow: inset 0px -3px 0 0 #736357;
+    background-color: $btnColor;
+    width: 170px;
+    height: 50px;
+    margin: 50px auto;
+    border: none;
+    outline: none;
+    transition: all .3s;
+    cursor: pointer;
+
+    &:hover {
+        background-color: $hoverColor;
+        color: $darkColor;
+    }
+
+    &:active {
+        box-shadow: inset 0px 3px 0 0 #736357;
     }
 }
 
-.undertitle {
-    font-size: 16px;
-    text-align: center;
-    margin-bottom: 70px;
+.title {
+    font-size: 30px;
+    font-weight: 600;
+    color: $textColor;
+    font-family: $titleFont;
 }
 
-.preloader {
-    position: fixed;
+.header {
+    position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: 3;
-    background-color: $img-color;
-    text-align: center;
-    color: #fff;
-    font-size: 30px;
-    padding: 20%;
-    transition: 1s all;
-    opacity: 1;
-    visibility: visible;
+    width: 100%;
+    z-index: 1;
+    overflow: hidden;
 }
 
-.loader {
-    width: 90px;
-    height: 90px;
-    border: 10px solid white;
-    border-radius: 50%;
-    border-top-color: #c0301c;
-    line-height: 60px;
+.burger-open {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-self: stretch;
+    background: none;
+    border: none;
+    outline-color: $white;
+    height: 55px;
+    left: 10%;
+    padding: 10px;
+    border-radius: 2px;
+    z-index: 2;
+    transition: .3s;
+    display: none;
+
+    span {
+        width: 35px;
+        height: 5px;
+        background-color: $white;
+        display: block;
+        border-radius: 5px;
+    }
+
+    &:hover span {
+        background-color: $hoverColor;
+    }
+}
+
+.burger-close {
     color: white;
-    padding: 5px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    animation: spin 1s infinite;
-}
+    transition: all .3s;
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 4em;
+    background: none;
+    border: none;
+    outline-style: none;
+    display: block;
+    width: 100%;
 
-.done {
-    opacity: 0;
-    visibility: hidden;
-}
-
-#left,
-#right {
-    display: inline-block;
-}
-
-@keyframes spin {
-    from {
-        transform: translate(-50%, -50%) rotate(0deg);
-    }
-    to {
-        transform: translate(-50%, -50%) rotate(360deg);
+    &:hover {
+        transform: rotate(90deg);
     }
 }
 
-@media only screen and (max-width: 768px) {
-    %sec-padding {
-        padding: 50px 0;
-    }
-    body {
-        padding-bottom: 195px;
-    }
-}
+.nav {
+    display: flex;
+    justify-content: space-between;
 
-@media only screen and (max-width: 576px) {
-    .undertitle {
-        margin-bottom: 20px;
+    &__wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 40px 1rem;
     }
-}
 
-@media only screen and (max-width: 470px) and(min-width: 320px) {
-    %sec-padding {
-        padding: 20px 0;
-    }
-    body {
-        padding-bottom: 135px;
-    }
-    .sctitle {
-        padding-bottom: 30px;
-        &:before {
-            top: 30px;
+    &__list {
+        padding-left: 40px;
+        font-weight: normal;
+
+        a {
+            color: white;
+            transition: all .3s;
+
+            &:hover {
+                color: $hoverColor;
+            }
         }
     }
 }
 
-@keyframes rubberBand {
-    from {
-        -webkit-transform: scale3d(1, 1, 1);
-        transform: scale3d(1, 1, 1);
-    }
-    30% {
-        -webkit-transform: scale3d(1.25, 0.75, 1);
-        transform: scale3d(1.25, 0.75, 1);
-    }
-    40% {
-        -webkit-transform: scale3d(0.75, 1.25, 1);
-        transform: scale3d(0.75, 1.25, 1);
-    }
-    50% {
-        -webkit-transform: scale3d(1.15, 0.85, 1);
-        transform: scale3d(1.15, 0.85, 1);
-    }
-    65% {
-        -webkit-transform: scale3d(0.95, 1.05, 1);
-        transform: scale3d(0.95, 1.05, 1);
-    }
-    75% {
-        -webkit-transform: scale3d(1.05, 0.95, 1);
-        transform: scale3d(1.05, 0.95, 1);
-    }
-    to {
-        -webkit-transform: scale3d(1, 1, 1);
-        transform: scale3d(1, 1, 1);
+.logo {
+    display: flex;
+    align-items: center;
+    color: white;
+    font-size: 34px;
+    padding-left: 14px;
+    font-family: $titleFont;
+    transition: all .2s;
+}
+
+.mob-menu {
+    flex-direction: column;
+    padding: 10px;
+    transition: .5s;
+    transform: translate(-500%);
+    position: fixed;
+    top: 0;
+    z-index: 2;
+    background-color: $darkColor;
+    opacity: .9;
+
+    .nav__list {
+        padding: 10px;
     }
 }
 
-.rubberBand {
-    -webkit-animation-name: rubberBand;
-    animation-name: rubberBand;
+.slider {
+    position: relative;
+    height: 100vh;
+    font-family: $mainFont;
+}
+
+.slides {
+    display: none;
+    animation-name: fade;
+    animation-duration: 1s;
+    background-size: cover;
+    text-align: center;
+    color: $white;
+
+    &__content {
+        position: absolute;
+        top: 30%;
+        width: 100%;
+    }
+
+    &__title {
+        font: $titleFont;
+        font-size: 52px;
+        font-weight: 800;
+        padding: 15px;
+    }
+
+    &__subtitle {
+        font: $titleFont;
+        font-size: 36px;
+        font-weight: 500;
+    }
+
+    &__text {
+        font-size: 16px;
+        font-weight: 300;
+        line-height: 1.5;
+        max-width: 562px;
+        margin: 0 auto;
+    }
+}
+
+.slides img {
+    vertical-align: middle;
+    width: 100%;
+    min-height: 300px;
+    object-fit: cover;
+    height: 100vh;
+}
+
+.slideshow-container {
+    top: 0;
+    left: 0;
+    position: relative;
+    text-align: center;
+}
+
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 1em;
+    margin-top: -1.5em;
+    color: #fff;
+    font-weight: bold;
+    font-size: 2em;
+    transition: 0.6s ease;
+}
+
+.next {
+    right: 8%;
+}
+
+.prev {
+    left: 8%;
+}
+
+.prev:hover {
+    transform: translateX(-20px);
+    opacity: .5;
+}
+
+.next:hover {
+    transform: translateX(20px);
+    opacity: .5;
+    color: white;
+    fill: white;
+}
+
+.dots {
+    text-align: center;
+    position: absolute;
+    bottom: 20px;
+    left: 45%;
+}
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: $white;
+    border-radius: 50%;
+    display: inline-block;
+    transition: all 0.6s ease;
+    border: 2px solid transparent;
+}
+
+.active,
+.dot:hover {
+    border: 2px solid $hoverColor;
+    background-color: transparent;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+
+@media only screen and (max-width: 992px) {
+    .logo {
+        font-size: 26px;
+    }
+
+    .nav__list {
+        padding-left: 20px;
+    }
+
+    .next,
+    .prev {
+        transform: scale(.5);
+    }
+
+    .next {
+        right: 5%;
+    }
+
+    .prev {
+        left: 5%;
+    }
+
+    .next:hover {
+        transform: scale(.5) translateX(20px);
+    }
+
+    .prev:hover {
+        transform: scale(.5) translateX(-20px);
+    }
+
+    .slides {
+        &__title {
+            font-size: 36px;
+        }
+
+        &__subtitle {
+            font-size: 24px;
+        }
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .menu {
+        display: none;
+    }
+
+    .burger--visibility {
+        display: flex;
+    }
+
+    .logo {
+        margin: 0 auto;
+
+        h1 {
+            display: none;
+        }
+    }
+
+    .prev,
+    .next {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    .slides {
+        &__title {
+            font-size: 26px;
+
+        }
+
+        &__subtitle {
+            font-size: 20px;
+        }
+    }
+
+    .dots {
+        left: 35%;
+    }
+}
+
+/////// servises
+
+.services {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.service {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 266px;
+    margin: 80px 10px;
+    position: relative;
+
+    &__img {
+        margin: 0 auto;
+    }
+
+    &__img path {
+        transition: all .3s;
+    }
+
+    &:hover path {
+        fill: $hoverColor;
+    }
+
+    &__title {
+        font-family: $titleFont;
+        font-size: 22px;
+        font-weight: 600;
+        color: $textColor;
+        padding: 29px 0 19px 0;
+    }
+
+    &__text {
+        color: $liteGrey;
+        font-family: $mainFont;
+        font-size: 14px;
+        font-weight: 300;
+        line-height: 1.71;
+        padding-bottom: 30px;
+    }
+
+    &::after {
+        content: "";
+        position: absolute;
+        bottom: 0px;
+        width: 70px;
+        height: 3px;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: #f1eee9;
+        transition: all .3s;
+    }
+
+    &:hover::after {
+        background-color: $hoverColor;
+    }
+}
+
+
+@media only screen and (max-width: 1140px) {
+    .service {
+        width: 200px;
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    .service {
+        width: 266px;
+        margin: 40px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .service {
+        width: 250px;
+        margin: 40px 10px;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    .service {
+        width: 266px;
+        margin: 20px 10px;
+
+        &__text {
+            padding-bottom: 15px;
+        }
+    }
+}
+
+////real
+
+.realizations {
+    background-color: $bgLigth;
+    padding-top: 80px;
+    text-align: center;
+
+    &__container {
+        position: relative;
+        height: 700px;
+    }
+
+    &__text {
+        @extend %text;
+        width: 770px;
+        margin: 0 auto;
+    }
+
+    &__img {
+        position: absolute;
+        bottom: 0;
+        max-width: 100%;
+        transition: all .3s;
+
+        &--left {
+            left: 0;
+        }
+
+        &--center {
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 1;
+        }
+
+        &--right {
+            right: 0;
+        }
+
+        &:hover {
+            z-index: 2;
+        }
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    .realizations {
+        &__img {
+            width: 80%;
+        }
+
+        &__container {
+            height: 600px;
+        }
+    }
+}
+
+@media only screen and (max-width:768px) {
+    .realizations {
+        &__img {
+            width: 70%;
+        }
+
+        &__container {
+            height: 450px;
+        }
+
+        &__text {
+            width: 100%;
+        }
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    .realizations {
+        padding-top: 20px;
+
+        &__title {
+            font-size: 26px;
+            padding: 0 20px;
+        }
+
+        &__text {
+            padding: 20px;
+        }
+
+        &__img {
+            width: 90%;
+        }
+    }
+}
+
+//////text
+.text-box {
+    background-image: $mainColor;
+
+    &__inner {
+        padding: 50px 30px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__title {
+        font-family: $titleFont;
+        font-size: 28px;
+        color: $white;
+        text-align: left;
+        font-weight: normal;
+    }
+
+    &__content {
+        font-size: 18px;
+        font-weight: 300;
+        color: #615855;
+    }
+
+    .btn {
+        margin: 0;
+    }
+
+}
+
+.colored {
+    font-weight: normal;
+    color: $hoverColor;
+}
+
+///// 
+
+
+////counter
+
+.counters {
+    background-image: $mainColor;
+
+    &__inner {
+        display: flex;
+        justify-content: space-around;
+        text-align: center;
+        padding: 70px;
+        flex-wrap: wrap;
+    }
+}
+
+.counter {
+    text-align: center;
+    position: relative;
+    padding: 0 5px;
+
+    &__count {
+        font-size: 48px;
+        font-weight: 200;
+        line-height: 0.75;
+        color: $white;
+        padding-top: 30px;
+    }
+
+    &__name {
+        font-size: 14px;
+        font-weight: 300;
+        line-height: 1.43;
+        color: $hoverColor;
+        text-transform: uppercase;
+        padding-top: 20px;
+        padding-bottom: 30px;
+
+        &::after {
+            content: "";
+            position: absolute;
+            bottom: 0px;
+            width: 30px;
+            height: 2px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: #f1eee9;
+        }
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    .counters__inner {
+        padding: 40px;
+        justify-content: space-evenly;
+    }
+}
+
+
+@media only screen and (max-width:768px) {
+    .counter {
+        &__count {
+            font-size: 36px;
+        }
+    }
+}
+
+@media only screen and (max-width:700px) {
+    .counter {
+        padding: 40px 40px 0 40px;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    .counters__inner {
+        padding: 0px;
+        justify-content: space-around;
+    }
+
+    .counter {
+        padding: 20px 40px;
+
+        &__img {
+            height: 30px;
+        }
+
+        &__name {
+            padding-bottom: 0px;
+        }
+    }
+}
+
+@media only screen and (max-width: 440px) {
+    .counters__inner {
+        display: block;
+    }
 }
