--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,7 @@
 // @import 'realizations';
 // @import 'counter';
 // @import 'mobile';
+// @import 'projects';
 
 
 $mainColor:linear-gradient(to right, #211b19, #4e3427);
@@ -650,8 +651,8 @@ body {
     background-image: $mainColor;
 
     &__inner {
-        display: flex;
-        justify-content: space-around;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
         text-align: center;
         padding: 70px;
         flex-wrap: wrap;
@@ -703,31 +704,41 @@ body {
 
 @media only screen and (max-width:768px) {
     .counter {
+        padding: 30px 0 10px 0;
+
         &__count {
             font-size: 36px;
+        }
+
+        &:last-child {
+            grid-column: 3;
+        }
+
+        &__name {
+            padding-bottom: 0px;
         }
     }
 
     .counters__inner {
-        justify-content: space-between;
+        padding: 20px;
+        grid-template-columns: repeat(3, 1fr);
     }
 
 }
 
-@media only screen and (max-width:700px) {
-    .counter {
-        padding: 40px 40px 0 40px;
-    }
-}
 
 @media only screen and (max-width: 576px) {
     .counters__inner {
         padding: 0px;
-        justify-content: space-around;
+        grid-template-columns: repeat(2, 1fr);
     }
 
     .counter {
         padding: 20px 40px;
+
+        &:last-child {
+            grid-column: span 2;
+        }
 
         &__img {
             height: 30px;
@@ -785,13 +796,13 @@ body {
         background-position-y: 5px;
         padding-left: 50px;
         transition: all .3s;
+        overflow: hidden;
 
         &:hover {
-            transform: translateX(20px);
+            transform: translateX(10px);
         }
     }
 }
-
 
 @media only screen and (max-width: 992px) {
     .mobile {
@@ -802,6 +813,12 @@ body {
         &__list li {
             margin-left: 0px;
         }
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    .mobile {
+        padding-bottom: 20px;
     }
 }
 
@@ -876,5 +893,296 @@ body {
 @media only screen and (max-width:576px) {
     .brands__item {
         padding: 0px;
+    }
+}
+
+
+////projects
+
+.projects {
+    text-align: center;
+    padding: 80px 30px;
+
+    &__tab {
+        text-align: center;
+        padding: 40px;
+    }
+
+    &__tablinks {
+        border-radius: 3px;
+        border: solid 1px #ebebeb;
+        background-color: $white;
+        font-size: 14px;
+        font-weight: 300;
+        padding: 10px 20px;
+        margin-right: 10px;
+        cursor: pointer;
+        outline: none;
+        transition: all 0.3s;
+        color: $liteGrey;
+
+        &:last-child {
+            margin: 0;
+        }
+
+        &:hover,
+        &:focus {
+            background-color: $hoverColor;
+            color: $white;
+        }
+    }
+
+    &__text {
+        max-width: 760px;
+        font-size: 16px;
+        font-weight: 300;
+        line-height: 1.75;
+        color: $liteGrey;
+        padding-top: 24px;
+        margin: 0 auto;
+    }
+
+    &__tabcontent {
+        display: none;
+        grid: repeat(2, 1fr)/repeat(3, 1fr);
+        grid-gap: 30px;
+        animation: fadeEffect .5s;
+    }
+
+    &__content {
+        overflow: hidden;
+    }
+
+    .btn {
+        margin: 0;
+    }
+}
+
+.hovered {
+    background-color: $hoverColor;
+    color: $white;
+}
+
+.example {
+    width: 370px;
+
+    &__content {
+        padding: 30px;
+        position: relative;
+        transition: all .3s;
+        background-color: $bgLigth;
+
+        &::before {
+            content: "";
+            position: absolute;
+            top: -10px;
+            width: 20px;
+            height: 20px;
+            left: 20px;
+            transform: rotate(45deg);
+            transition: all .3s;
+            background-color: $bgLigth;
+        }
+    }
+
+    &:hover {
+        .example__content {
+            background-color: $darkColor;
+        }
+
+        .example__title {
+            color: $white;
+        }
+
+        .example__category {
+            color: $hoverColor;
+        }
+
+        .example__content::before {
+            background-color: $darkColor;
+        }
+
+        .example__info {
+            opacity: 1;
+        }
+    }
+
+    &__title {
+        font-size: 20px;
+        font-weight: 500;
+        color: $hoverColor;
+        font-family: $titleFont;
+    }
+
+    &__category {
+        font-size: 14px;
+        font-weight: 300;
+        color: #d1d1d1d1;
+    }
+
+    &__inner {
+        position: relative;
+    }
+
+    &__img {
+        position: relative;
+        display: block;
+        top: 0;
+        left: 0;
+        width: 100%;
+    }
+
+    &__info {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(54, 47, 45, 0.8);
+        opacity: 0;
+        transition: all .3s;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        padding: 0 120px;
+
+        &-link {
+
+            &:hover &--icon path {
+                fill: $hoverColor;
+            }
+        }
+    }
+}
+
+.show {
+    display: grid;
+}
+
+@keyframes fadeEffect {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+
+@media only screen and (max-width:1240px) {
+    .projects__tabcontent {
+        grid: repeat(3, 1fr)/repeat(2, 1fr);
+        justify-items: center;
+    }
+}
+
+@media only screen and (max-width:850px) {
+    .example {
+        width: 280px;
+
+        &__info {
+            padding: 50px 0;
+        }
+    }
+
+    .projects__tabcontent {
+        padding-bottom: 20px;
+    }
+}
+
+
+@media only screen and (max-width:768px) {
+    .projects {
+        padding: 20px;
+
+        &__tab {
+            padding: 20px;
+        }
+
+        &__tablinks {
+            margin-top: 20px;
+
+            &:last-child {
+                margin-top: 20px;
+            }
+        }
+
+        &__tabcontent {
+            grid-gap: 5px;
+        }
+    }
+
+    .example__content {
+        padding: 10px;
+    }
+}
+
+@media only screen and (max-width:630px) {
+    .projects__tabcontent {
+        display: block;
+    }
+
+    .example {
+        margin: 0 auto;
+    }
+}
+
+////footer
+
+.footer {
+    background-color: $darkColor;
+    font-size: 13px;
+    font-weight: 300;
+
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        padding: 30px;
+        color: $textColor;
+        flex-wrap: wrap;
+    }
+
+    a {
+        color: $textColor;
+    }
+
+    &__left,
+    &__rigth {
+        padding: 15px 0;
+    }
+}
+
+.lite {
+    color: $liteGrey;
+    font-weight: 300;
+    padding: 10px;
+}
+
+@media only screen and (max-width:850px) {
+
+    .footer {
+
+        &__inner {
+            justify-content: center;
+            padding: 20px;
+
+        }
+
+        &__left,
+        &__rigth {
+            padding: 15px;
+        }
+    }
+}
+
+@media only screen and (max-width:576px) {
+    .footer {
+
+        &__left,
+        &__rigth {
+            line-height: 2;
+            padding: 10px 0;
+        }
     }
 }
