--- a/css/style.css
+++ b/css/style.css
@@ -562,7 +562,9 @@ body {
   background-image: url(../images/bottphoto.png);
   background-size: cover;
   padding: 70px 0;
-  clear: left; }
+  clear: left;
+  background-repeat: no-repeat;
+  background-size: cover; }
   .brands__inner {
     display: flex;
     flex-wrap: wrap;
