--- a/sass/style.scss
+++ b/sass/style.scss
@@ -851,6 +851,8 @@ body {
     background-size: cover;
     padding: 70px 0;
     clear: left;
+    background-repeat: no-repeat;
+    background-size: cover;
 
     &__inner {
         display: flex;
