changed structure of scss files

--- a/sass/_brands.scss
+++ b/sass/_brands.scss
@@ -3,6 +3,8 @@
     background-size: cover;
     padding: 70px 0;
     clear: left;
+    background-repeat: no-repeat;
+    background-size: cover;
 
     &__inner {
         display: flex;
