--- a/sass/_counter.scss
+++ b/sass/_counter.scss
@@ -2,8 +2,8 @@
     background-image: $mainColor;
 
     &__inner {
-        display: flex;
-        justify-content: space-around;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
         text-align: center;
         padding: 70px;
         flex-wrap: wrap;
@@ -55,26 +55,41 @@
 
 @media only screen and (max-width:768px) {
     .counter {
+        padding: 30px 0 10px 0;
+
         &__count {
             font-size: 36px;
         }
+
+        &:last-child {
+            grid-column: 3;
+        }
+
+        &__name {
+            padding-bottom: 0px;
+        }
     }
+
+    .counters__inner {
+        padding: 20px;
+        grid-template-columns: repeat(3, 1fr);
+    }
+
 }
 
-@media only screen and (max-width:700px) {
-    .counter {
-        padding: 40px 40px 0 40px;
-    }
-}
 
 @media only screen and (max-width: 576px) {
     .counters__inner {
         padding: 0px;
-        justify-content: space-around;
+        grid-template-columns: repeat(2, 1fr);
     }
 
     .counter {
         padding: 20px 40px;
+
+        &:last-child {
+            grid-column: span 2;
+        }
 
         &__img {
             height: 30px;
@@ -83,6 +98,11 @@
         &__name {
             padding-bottom: 0px;
         }
+    }
+
+    .title {
+        font-size: 26px;
+        text-align: center;
     }
 }
 
