--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -1,5 +1,3 @@
-////mobile
-
 .mobile {
     padding-top: 75px;
 
@@ -25,9 +23,6 @@
 
     &__list li {
         margin-left: 50px;
-    }
-
-    &__list li {
         @extend %text;
         line-height: 2;
         padding: 0;
@@ -35,9 +30,14 @@
         background-repeat: no-repeat;
         background-position-y: 5px;
         padding-left: 50px;
+        transition: all .3s;
+        overflow: hidden;
+
+        &:hover {
+            transform: translateX(10px);
+        }
     }
 }
-
 
 @media only screen and (max-width: 992px) {
     .mobile {
@@ -47,8 +47,13 @@
 
         &__list li {
             margin-left: 0px;
-            line-height: 1.5;
         }
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    .mobile {
+        padding-bottom: 20px;
     }
 }
 
@@ -62,13 +67,12 @@
 
         &__list li {
             margin-left: 20px;
-            line-height: 2;
         }
     }
 
 }
 
-@media only screen and (max-width:768px) {
+@media only screen and (max-width:576px) {
     .mobile__list li {
         margin-left: 0;
         line-height: 1.5;
