--- a/sass/_realizations.scss
+++ b/sass/_realizations.scss
@@ -1,3 +1,5 @@
+////real
+
 .realizations {
     background-color: $bgLigth;
     padding-top: 80px;
@@ -18,6 +20,7 @@
         position: absolute;
         bottom: 0;
         max-width: 100%;
+        transition: all .3s;
 
         &--left {
             left: 0;
@@ -82,6 +85,56 @@
 
         &__img {
             width: 90%;
+        }
+    }
+}
+
+//////text
+.text-box {
+    background-image: $mainColor;
+
+    &__inner {
+        padding: 50px 30px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    &__title {
+        font-family: $titleFont;
+        font-size: 28px;
+        color: $white;
+        text-align: left;
+        font-weight: normal;
+    }
+
+    &__content {
+        font-size: 18px;
+        font-weight: 300;
+        color: #615855;
+    }
+
+    .btn {
+        margin: 0;
+    }
+
+}
+
+.colored {
+    font-weight: normal;
+    color: $hoverColor;
+}
+
+@media only screen and (max-width: 800px) {
+    .text-box {
+        &__inner {
+            padding: 20px;
+            justify-content: center;
+        }
+
+        .btn {
+            margin: 20px;
         }
     }
 }
