changes for optimization

--- a/sass/_brands.scss
+++ b/sass/_brands.scss
@@ -1,5 +1,5 @@
 .brands {
-    background-image: url(../images/bottphoto.png);
+    background-image: url(../images/bottphoto.jpg);
     background-size: cover;
     padding: 70px 0;
     clear: left;
