--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -7,12 +7,12 @@
         display: flex;
         justify-content: space-between;
         padding: 30px;
-        color: $textColor;
+        color: $liteGrey;
         flex-wrap: wrap;
     }
 
     a {
-        color: $textColor;
+        color: $liteGrey;
     }
 
     &__left,
