--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -55,6 +55,7 @@ body {
     outline: none;
     transition: all .3s;
     cursor: pointer;
+    margin-top: 10px;
 
     &:hover {
         background-color: $hoverColor;
